@@ -1,0 +1,1 @@
+@import url(import.css?delay=1);
