@@ -2,3 +2,4 @@
   <p id="inner">One two three <span id="span">four</span></p>
 </div>
 <div id="container"><div></div></div>
+<div id="css_load_check"></div>
