@@ -1,0 +1,6 @@
+#css_load_check {
+	width: 100px;
+	height: 100px;
+	background-color: #f1f1f1;
+	border: 1px solid #333;
+}
